# predictAP

./: .pre-commit-config.yaml  Makefile  README.md  main.py  mypy.ini  pyproject.toml  setup.cfg
index/: index.json
scripts/: generate_test_data.py
src/: display.py  index.py  input.py  main.py  search.py
src/index/: index.json
tests/data/samuel_test_data/data/: user1.json  user2.json
tests/unit/: conftest.py  test_display.py  test_index.py  test_search.py
